// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> UI snapshots renders disabled 1`] = `
<button
  className="btn primary disabled "
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="btn-text"
  >
    Button Text
  </span>
  <div
    className="inline-block h-6 w-6 btn-loader"
  >
    <div
      className="inner-loader border-gray-500"
    />
    <div
      className="inner-loader border-gray-500 animation-delay-.5s"
    />
  </div>
</button>
`;

exports[`<Button /> UI snapshots renders loading 1`] = `
<button
  className="btn primary loading disabled "
  disabled={true}
  onClick={[Function]}
  type="button"
>
  <span
    className="btn-text"
  >
    Button Text
  </span>
  <div
    className="inline-block h-6 w-6 btn-loader"
  >
    <div
      className="inner-loader border-gray-500"
    />
    <div
      className="inner-loader border-gray-500 animation-delay-.5s"
    />
  </div>
</button>
`;

exports[`<Button /> UI snapshots renders primary with icon 1`] = `
<button
  className="btn primary "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-sign-in-alt fa-w-16 fa-fw fa-1x btn-icon"
    data-icon="sign-in-alt"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M416 448h-84c-6.6 0-12-5.4-12-12v-40c0-6.6 5.4-12 12-12h84c17.7 0 32-14.3 32-32V160c0-17.7-14.3-32-32-32h-84c-6.6 0-12-5.4-12-12V76c0-6.6 5.4-12 12-12h84c53 0 96 43 96 96v192c0 53-43 96-96 96zm-47-201L201 79c-15-15-41-4.5-41 17v96H24c-13.3 0-24 10.7-24 24v96c0 13.3 10.7 24 24 24h136v96c0 21.5 26 32 41 17l168-168c9.3-9.4 9.3-24.6 0-34z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  <span
    className="btn-text"
  >
    Icon Button
  </span>
  <div
    className="inline-block h-6 w-6 btn-loader"
  >
    <div
      className="inner-loader border-white"
    />
    <div
      className="inner-loader border-white animation-delay-.5s"
    />
  </div>
</button>
`;

exports[`<Button /> UI snapshots renders secondary 1`] = `
<button
  className="btn secondary "
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <span
    className="btn-text"
  >
    Button Text
  </span>
  <div
    className="inline-block h-6 w-6 btn-loader"
  >
    <div
      className="inner-loader border-purple-500"
    />
    <div
      className="inner-loader border-purple-500 animation-delay-.5s"
    />
  </div>
</button>
`;
